query wrapper functionality

--- a/full-stack/.env
+++ b/full-stack/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:VPzcxBzXVMEqXDeucnEHWYdfCNMWLowJ@roundhouse.proxy.rlwy.net:18877/railway"
+NEXTAUTH_SECRET=ahuhiuhiuhapiehIUpipHJpoajevaf
