--- a/full-stack/package.json
+++ b/full-stack/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
     "@prisma/client": "^5.14.0",
+    "@tanstack/react-query": "^5.40.0",
     "next": "13.5.6",
     "next-auth": "^4.24.7",
     "react": "^18",
